--- a/Code/08_events/one.html
+++ b/Code/08_events/one.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Htnml Events </title>
+    <title>Html Events </title>
 </head>
 <body style="background-color: #414141; color: aliceblue;">
     <h2>Amazing image</h2>
@@ -55,9 +55,9 @@
 
     //  Event Object
 
-    document.getElementById("owl").addEventListener("click", function (e) {
-        console.log(e);
-    }, false);
+    // document.getElementById("owl").addEventListener("click", function (e) {
+    //     console.log(e);
+    // }, false);
 
     /*
     - We get PointerEvent{} object.
@@ -123,7 +123,7 @@
 
     // Start learning from here
 
-    
+
     // the images should gets hidden on clicking any image
 
     document.querySelector('#images').addEventListener('click', function(e){
